--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Sínen Vagyunk</string>
     <string name="title_activity_train">TrainActivity</string>
+    <string name="title_activity_territory">TerritoryActivity</string>
 </resources>
